--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Atari 2600 (Stella) support for multiple assemblers
-# - DASM
-# - CC65
+lazy-lock.json
+.luarc.json
 
-# Assembled binaries and object directories
-obj/
-a.out
-*.bin
-*.a26
-
-# Add in special Atari 7800-based binaries for good measure
-*.a78
